tests/NormalTests/paczka1/fuzzy1/32849729.err
Error in line 8: UbiGN26uoz A875 56,4
Error in line 12: 1fOzaPQnJ S621 32,1
Error in line 24: lAR6vsj0G S621 51,1
Error in line 29: lAR6vsj0G A816 99,0
Error in line 26: A875 A816 8,0
Error in line 28: v7SSLkiWa16 A816 77,7
Error in line 38: lAR6vsj0G S621 183,12
Error in line 32: UbiGN26uoz S621 86,6
